# radiation_sim

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.bat  publish.bat
assets/simulation_data/: compound_data.csv
assets/simulation_data/mass_attenuation_coefficients/: 01.csv  02.csv  03.csv  07.csv  14.csv  t.csv
assets/simulation_data/stopping_power_alpha/: 14.csv  22.csv  26.csv  29.csv  32.csv  82.csv  Air.csv  Water.csv
assets/simulation_data/stopping_power_electrons/: 02.csv  06.csv  09.csv  10.csv  13.csv  82.csv  Air.csv  Water.csv
docs/: index.html  radiation_sim_bin.js
docs/assets/human_model/: human.glb
docs/assets/simulation_data/: compound_data.csv  element_data.csv  isotope_data.csv
docs/assets/simulation_data/mass_attenuation_coefficients/: 04.csv  05.csv  06.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  82.csv  Air.csv  Vacuum.csv  Water.csv
docs/assets/simulation_data/stopping_power_alpha/: 01.csv  02.csv  04.csv  06.csv  07.csv  08.csv  10.csv  13.csv  18.csv  26.csv  29.csv  32.csv  Air.csv  Vacuum.csv  t.csv
docs/assets/simulation_data/stopping_power_electrons/: 01.csv  03.csv  04.csv  05.csv  07.csv  08.csv  11.csv  12.csv  14.csv  82.csv  Water.csv  t.csv
src/: constants.rs  data_reading.rs  env.rs  lib.rs  main.rs  materials.rs  particle.rs  render.rs  ui.rs
src/data_reading/: compound.rs  element.rs  mod.rs
src/material/: mod.rs  presets.rs
static/: index.html
