[package]
name = "radiation_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.8"
bevy_egui = "0.16"

bytemuck = "1.12.1"
fastrand = "1.8.0"
atomic_float = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = "0.2.83"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
