[package]
name = "radiation_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "radiation_sim_bin"
path = "src/main.rs"

[dependencies]
bevy = "0.8"
bevy_egui = "0.16"

atomic_float = "0.1.0"
bytemuck = "1.12.1"
csv = "1.1.6"
fastrand = "1.8.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = "1.0.145"
ordered-float = "3.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"
